@@ -1,5 +1,10 @@
 2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>
 
+	* config.host (i[34567]86-*-hipperos*): Add support for HIPPEROS on x86
+	(i[34567]86-*-hipperos*).
+
+2018-12-07  Vladimir Svoboda  <vladimir.svoboda@hipperos.com>
+
 	* config.host (powerpc*-*-hipperos*): Add support for HIPPEROS on PowerPC
 	(powerpc*-*-hipperos*).
 	* configure.ac: Likewise.
